# Robo_Motion

./: README.md
documentation/: new_file_info.txt
documentation/how_to/: generate_project_info.txt  project_setup.txt  run_project  run_project.txt  train_classifier.txt
documentation/templates/: unit_test_template.cpp
resource/: all_classifier.txt  vehicle.3gp
source/: CMakeLists.txt  Robo_Motion  robo_motion_main.cpp
source/message_sys/Server/: client.cpp  client.h  server.cpp  server.h  unity3d_client_script.cs
source/message_sys/test/: TestCServer.cpp  TestClient.cpp  TestServer.cpp  TestServerSystem.cpp  client_main.cpp  server_main.cpp
source/object_analysis/DecisionEngine/: DecisionEngine.h
source/object_analysis/FOL/: Atom.h  Object.h  Ontology.h  Operator.h  Quantifier.h  Sentence.cpp  Sentence.h  object_type_file.txt
source/object_analysis/InferenceEngine/: InferenceEngine.h
source/object_analysis/KnowledgeBase/: KnowledgeRepo.pl  Ontology.cpp  Ontology.h
source/object_analysis/KnowledgeBase/DecisionEngine/: DecisionEngine.cpp  DecisionEngine.h  DecisionHeuristic.pl
source/object_analysis/KnowledgeBase/InferenceEngine/: InferenceEngine.cpp  InferenceEngine.h
source/object_analysis/LanguageRepEngine/: LanguageRepEngine.h
source/object_analysis/test/: TestFOLAtom.cpp  TestFOLOntology.cpp  TestFOLOperator.cpp  TestFOLQuantifier.cpp  TestFOLSentence.cpp
source/object_id/classification/: cars3.xml  vehicle_classifier.xml
source/object_id/detection/: ObjectDetectionInfo.txt  all_classifier.txt  object_identifier.cpp
